--- a/Project.toml
+++ b/Project.toml
@@ -7,21 +7,29 @@ authors = ["Mitch Phillipson <mitch.phillipson@gmail.com>"]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 MPSGE = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
 WiNDCContainer = "75ccf2c7-f350-4b24-b7dd-6f142b3d3146"
 WiNDCNational = "859d2a84-d038-44d0-959f-b84298eeb557"
 WiNDCRegional = "3a283cf7-dd81-4e73-b72e-b49da15ce41c"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
 CSV = "0.10.15"
 DataFrames = "1.8.1"
 DataStructures = "0.19.3"
+Downloads = "1.6.0"
+HTTP = "1.10.19"
 JLD2 = "0.6.3"
+JSON = "1.3.0"
 MPSGE = "0.6.4"
 WiNDCContainer = "0.3.0"
 WiNDCNational = "0.3.2"
 XLSX = "0.10.4"
 YAML = "0.4.16"
+ZipFile = "0.10.1"
