--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,10 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MPSGE = "d5dc2f44-7ae2-49e9-bc77-b47b6bca565d"
 WiNDCContainer = "75ccf2c7-f350-4b24-b7dd-6f142b3d3146"
 WiNDCNational = "859d2a84-d038-44d0-959f-b84298eeb557"
@@ -25,8 +27,10 @@ DataFrames = "1.8.1"
 DataStructures = "0.19.3"
 Downloads = "1.6.0"
 HTTP = "1.10.19"
+Ipopt = "1.13.0"
 JLD2 = "0.6.3"
 JSON = "1.3.0"
+JuMP = "1.29.3"
 MPSGE = "0.6.4"
 WiNDCContainer = "0.3.0"
 WiNDCNational = "0.3.2"
