--- a/Project.toml
+++ b/Project.toml
@@ -37,3 +37,10 @@ WiNDCNational = "0.3.2"
 XLSX = "0.10.4"
 YAML = "0.4.16"
 ZipFile = "0.10.1"
+julia = "1.6.7"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
