--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ JSON = "1.3.0"
 JuMP = "1.29.3"
 MPSGE = "0.6.4"
 WiNDCContainer = "0.3.0"
-WiNDCNational = "0.3.2"
+WiNDCNational = "0.3.2, 0.4"
 WiNDCRegional = "0.0.1"
 XLSX = "0.10.4"
 YAML = "0.4.16"
