CompatHelper: bump compat for WiNDCRegional to 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ JuMP = "1.29.3"
 MPSGE = "0.6.4"
 WiNDCContainer = "0.3.0"
 WiNDCNational = "0.3.2"
-WiNDCRegional = "0.0.1"
+WiNDCRegional = "0.0.1, 0.1"
 XLSX = "0.10.4"
 YAML = "0.4.16"
 ZipFile = "0.10.1"
